feature: добавить тесты